--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.43",
     "@types/react-test-renderer": "^18.0.7",
-    "eslint": "^8.55.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "prettier": "^3.1.1",
+    "prettier": "3.1.1",
     "typescript": "^5.3.3"
   },
   "private": true
