--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "prettier": "3.1.1",
     "typescript": "^5.3.3"
   },
